gitops/manifests/hello-world/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhtas-demo-dev
  labels:
    app.kubernetes.io/part-of: rhtas-cosign-demos
